testing/tests/ui/since_1.58/break_outside_of_loop.stderr
error: problems parsing template source at row 1, column 9 near:
       "break%}, have a parsing error!"
 --> tests/ui/since_1.58/break_outside_of_loop.rs:5:14
  |
5 |     source = "Have a {%break%}, have a parsing error!",
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
